[package]
name = "vtx-link"
version = "0.2.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
# Web 框架
axum = "0.7"
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
# 错误处理
anyhow = "1.0"
# 命令行参数
clap = { version = "4.4", features = ["derive"] }
# MIME 类型
mime_guess = "2.0"
# IO 工具
tokio-util = { version = "0.7", features = ["io"] }
# 系统监控 (兼容 Windows/Linux)
sys-info = "0.9"